# CompareLogic

./: .gitignore  CMakeLists.txt
docs/: CMakeLists.txt  mainpage.md
include/: arithmetic_grammar.h  logic_comparer.h  logical_grammar.h
include/parser/: grammar.h  lexer.h  production.h  syntax_parser.h  token.h
src/: CMakeLists.txt  arithmetic_grammar.cpp  logic_comparer.cpp  logical_grammar.cpp
src/parser/: CMakeLists.txt  grammar.cpp  lexer.cpp  production.cpp  syntax_parser.cpp  token.cpp
standalone/: CMakeLists.txt  compare_logical_expression.cpp
test/: CMakeLists.txt  test_logic_comparer.cpp
test/parser/: CMakeLists.txt  test_grammar.cpp  test_lexer.cpp  test_production.cpp  test_syntax_parser.cpp
